@@ -1,7 +1,7 @@
 Package: assertr
 Type: Package
 Title: Assertive Programming for R Analysis Pipelines
-Version: 3.0.0
+Version: 3.0.1
 Authors@R: person("Tony", "Fischetti",
               email="tony.fischetti@gmail.com",
               role = c("aut", "cre"))
@@ -18,13 +18,14 @@ ByteCompile: TRUE
 Depends: R (>= 3.1.0)
 Imports: dplyr (>= 0.7.0), MASS, methods, stats, utils, rlang (>=
         0.3.0)
-Suggests: knitr, testthat, magrittr, rmarkdown, tibble, plyr
+Suggests: knitr, testthat (>= 3.0.0), magrittr, rmarkdown, tibble, covr
 VignetteBuilder: knitr
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Encoding: UTF-8
+Config/testthat/edition: 3
 NeedsCompilation: no
-Packaged: 2022-11-05 22:49:05 UTC; tony
+Packaged: 2023-11-22 23:34:48 UTC; tony
 Author: Tony Fischetti [aut, cre]
 Maintainer: Tony Fischetti <tony.fischetti@gmail.com>
 Repository: CRAN
-Date/Publication: 2022-11-05 23:10:02 UTC
+Date/Publication: 2023-11-23 00:00:02 UTC
