@@ -1,21 +1,22 @@
-52fcc6c355aa9843029e8c9dce5bfbc5 *DESCRIPTION
+972e0e2c1b6954946258f47e5c191a11 *DESCRIPTION
 547e5512300c2d4520ea8c764cb109ef *LICENSE
 5bbfa8209ce54e1530b88eb7acfbfcf0 *NAMESPACE
-f713af367ef65f1e525eaa1ec8e8c1d4 *NEWS
-d518faa2b22cab500bf6962318cc47ae *R/assertions.R
+1cac6befeeb917d51047dd027e74412f *NEWS
+dd6cfaf3699127f831c1d63d53983383 *R/assertions.R
+df6cc46bc7fae1a55b713f3d5065b35a *R/assertr-package.R
 fd16328ba49e3493fdffa4ca8bd62304 *R/assertr.R
 a2b684df58b54cdba1a49e738fcb92ec *R/errors.R
-3a86348ab68ee92fd2e0d1ec5df745a1 *R/predicates.R
+193c7f8aba56eb51c5487a3df30bddef *R/predicates.R
 7ba0fe06a1255cf7fcb4b41ffd71a916 *R/row-redux.R
 b0052239563d59adccf2f0bafb0170ed *R/utils.R
-9db90b430428a97b66e80a77b87bf16d *README.md
-6181af5d0aeab091b542747d4889b2a0 *build/vignette.rds
+f644846e17ededda050a70227357097f *README.md
+dd387eeae161473ab39ab199e186320b *build/vignette.rds
 3516c371fadb90885f6297431fa01e40 *inst/doc/assertr.R
 0e6b135ea0f350959cce7eb4bc04908c *inst/doc/assertr.Rmd
-41bc63ab201aee5d4ffb0940e2778998 *inst/doc/assertr.html
+34210326e8c32ba25cd7d4cec6667be5 *inst/doc/assertr.html
 9ae9ebca7ffd7d3cfe91e11cddd223ab *man/assert.Rd
 9cc19922a08996ddec02634ff6a4a4c7 *man/assert_rows.Rd
-0908caeaca1a1874da83d2eb4ce4f0e8 *man/assertr.Rd
+649e21db83246ddc758c67a813ba0422 *man/assertr.Rd
 d244a86874280ce72daf5caca514e2e7 *man/chaining_functions.Rd
 c67806042af70ea234ecf5c6af398bc6 *man/col_concat.Rd
 cfe21a905d5f6bb6823c351ff45c3772 *man/duplicates_across_cols.Rd
@@ -38,13 +39,13 @@ faf5b9c6cf4e414af51dce3e273bb6a1 *man/print.assertr_verify_error.Rd
 831349bf065314135ee21a03a4a8f147 *man/summary.assertr_assert_error.Rd
 fd52fb8be3f2c6bc4e799f4618a8a86a *man/summary.assertr_verify_error.Rd
 b3a7aa9d86d4a9978c451d42d74e1920 *man/verify.Rd
-5e5c88e166cf3a096f5a38d72e5e850d *man/within_bounds.Rd
+ee3afd8365228bb4de872ad24a94e75c *man/within_bounds.Rd
 02e0e7846e7e4020860ff54e9644f053 *man/within_n_mads.Rd
 805d653e6ef5c48f877e5d105f0d8db0 *man/within_n_sds.Rd
-b398788a2ca6f7c24147a5c61f4247da *tests/testthat.R
-86530c7ce1712b3acdf37287a72556de *tests/testthat/test-assertions.R
-eb1e63578c4b23fcaed25bbd0ba3f63b *tests/testthat/test-errors.R
-250ce180e06a59526517395ddd173bd5 *tests/testthat/test-predicates.R
-2df33e9b085f138ebc77581c5f76ee2a *tests/testthat/test-row-redux.R
-5289c5a74ed26d8c39935fa08a094118 *tests/testthat/test-utils.R
+aa99ce164960c7748764fdd183a663ca *tests/testthat.R
+c5e1d12ac24c5819ed7b46c8a7775758 *tests/testthat/test-assertions.R
+e24e334d79ec29b0ca15b8a3aed6d4c2 *tests/testthat/test-errors.R
+116320d9805a54c1258b83e44c9deff2 *tests/testthat/test-predicates.R
+efe6586061cca23ae36956430f55e4a8 *tests/testthat/test-row-redux.R
+43745fb3d7295960d554dd0c5cce39c3 *tests/testthat/test-utils.R
 0e6b135ea0f350959cce7eb4bc04908c *vignettes/assertr.Rmd
