@@ -120,9 +120,9 @@ assert <- function(data, predicate, ..., success_fun=success_continue,
                       return(apply.predicate.to.vector(this.vector,
                                                        predicate))})
   # special case for a single row data.frame
-  if(length(log.mat)==1 && !methods::is(log.mat, "matrix")){
+  if(!methods::is(log.mat, "matrix")){
     tmp <- names(log.mat)
-    log.mat <- matrix(data=log.mat)
+    log.mat <- matrix(data=log.mat, nrow=1)
     colnames(log.mat) <- tmp
   }
 
@@ -701,7 +701,7 @@ verify <- function(data, expr, success_fun=success_continue,
   assertion.id <- generate_id()
   error <- make.assertr.verify.error("verify",
                                      num.violations, deparse(expr),
-                                     (1:length(logical.results))[!logical.results],
+                                     which(!logical.results),
                                      description, assertion.id)
   error_fun(list(error), data=data)
 }
